// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compute 1`] = `
Object {
  "Button": Object {
    "className": "css-qhe590",
    "type": "tag",
  },
  "Text": Object {
    "props": Object {
      "grow": true,
      "kind": "flat",
      "pb": 10,
      "pl": 10,
      "pr": 10,
      "pt": 10,
    },
    "type": "component",
  },
}
`;

exports[`defaultProps = { size: s } 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "defaultProps": Object {
      "size": "s",
    },
    "slots": Object {},
  },
}
`;

exports[`defaultProps = undefined 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {},
  },
}
`;

exports[`mapProps = () => ({}) 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "mapProps": [Function],
    "slots": Object {},
  },
}
`;

exports[`merge two theme - cache 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {
      "Button": Object {
        "styles": Array [
          Object {
            "width": 200,
          },
        ],
        "type": undefined,
      },
    },
  },
}
`;

exports[`merge two theme - defaultProps additional props 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "defaultProps": Object {
      "kind": "flat",
      "size": "s",
    },
    "slots": Object {},
  },
}
`;

exports[`merge two theme - defaultProps empty/empty 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {},
  },
}
`;

exports[`merge two theme - defaultProps empty/not empty 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "defaultProps": Object {
      "size": "s",
    },
    "slots": Object {},
  },
}
`;

exports[`merge two theme - defaultProps override props 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "defaultProps": Object {
      "size": "l",
    },
    "slots": Object {},
  },
}
`;

exports[`merge two theme - mapProps empty/not empty 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "mapProps": [Function],
    "slots": Object {},
  },
}
`;

exports[`merge two theme - mapProps not empty/not empty 1`] = `
Object {
  "kind": "flat",
  "mapProps1": "flat",
  "mapProps2": "flat",
}
`;

exports[`mergeStyles - merge 1`] = `
Array [
  "str1;str2",
  Object {
    "one": 3,
    "three": "3",
    "two": 2,
  },
  [Function],
  [Function],
]
`;

exports[`mergeStyles - nested merge 1`] = `
Array [
  "str1;str2",
  Object {
    "nested": Object {
      "one": "1",
      "three": 3,
      "two": 3,
    },
    "one": 3,
    "three": "3",
    "two": 2,
  },
  [Function],
]
`;

exports[`mergeStyles - sort 1`] = `
Array [
  "",
  Object {},
  [Function],
  [Function],
]
`;

exports[`slot Button as array styles 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {
      "Button": Object {
        "styles": Array [
          Object {
            "fontSize": 12,
          },
        ],
        "type": "tag",
      },
    },
  },
}
`;

exports[`slot Button as array styles with any elements 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {
      "Button": Object {
        "styles": Array [
          "",
          Object {
            "fontSize": 12,
          },
          [Function],
        ],
        "type": "tag",
      },
    },
  },
}
`;

exports[`slot Button as object styles 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {
      "Button": Object {
        "styles": Array [
          Object {
            "color": [Function],
            "fontSize": 12,
          },
        ],
        "type": "tag",
      },
    },
  },
}
`;

exports[`slot Button is tag (default type) 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {
      "Button": Object {
        "styles": Array [
          Object {
            "fontSize": 12,
          },
        ],
        "type": "tag",
      },
    },
  },
}
`;

exports[`slot Text is component 1`] = `
ThemeBuilder {
  "cache": WeakMap {},
  "theme": Object {
    "slots": Object {
      "Text": Object {
        "styles": Array [
          Object {
            "fontSize": 12,
          },
        ],
        "type": "component",
      },
    },
  },
}
`;
